Feat se añade el footer y se diseña el responsive movil

--- a/frontend/source/app-customers/src/app/shared/footer/footer.component.html
+++ b/frontend/source/app-customers/src/app/shared/footer/footer.component.html
@@ -1,3 +1,28 @@
-<p>
-  footer works!
-</p>
+<section class="footer">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-4 max-auto">
+        <span class="footer_info">Location</span>
+      </div>
+      <div class="col-4  max-auto">
+        <span class="footer_info">About me</span>
+      </div>
+      <div class="col-4  max-auto">
+        <span class="footer_info">About me</span>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-4 ">
+        <span class="text_location">Medellin, antioquia</span>
+      </div>
+      <div class="col-4">
+        <a href="#"><i class="fa fa-github-alt fa-2x" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i></a>
+      </div>
+    </div>
+  </div>  
+</section>
+
+
+
+
