--- a/frontend/source/app-customers/src/app/app.component.css
+++ b/frontend/source/app-customers/src/app/app.component.css
@@ -3,5 +3,22 @@
 a{
     color: #00B5B5
 }
+body{
+    margin:0px;
+    padding: 0px;
+}
+
+.navbar{
+    border-bottom: 2px solid #fcab0e;   
+    position: fixed;
+}
+
+.nav a{
+    text-decoration: none;
+    padding-right: 20px;
+
+}
+
+
 
 /********************************/
