--- a/frontend/source/app-customers/src/app/app.component.html
+++ b/frontend/source/app-customers/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--Solve issue with navnav-->
 
-<section id="header">
-  <nav class="navbar navbar-toggleable-md bg-faded navbar-fixed-top" style="background-color: #2c3e50">
+<section class="header">
+  <nav class="navbar navbar-toggleable-md bg-faded navbar-fixed-top" style="background-color: #2c3e50;
+">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
@@ -12,8 +13,8 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">Image</a></li>
-        <li><a href="#contact">Dropdown login</a></li>
+        <a href="#about">Image<li></li></a>
+        <a href="#about">Login<li></li></a>
       </ul>
     </div>
   </nav>  
@@ -23,7 +24,7 @@
   <app-customers></app-customers>  
 </section>
 <section>
-  <h1>hello</h1>
+  <app-footer>d</app-footer>
 </section>
 
 
