--- a/frontend/source/app-customers/src/app/app.component.css
+++ b/frontend/source/app-customers/src/app/app.component.css
@@ -13,10 +13,26 @@ body{
     position: fixed;
 }
 
-.nav a{
-    text-decoration: none;
-    padding-right: 20px;
 
+.nav {
+    padding-right: 35px;
+    background-color: #2c3e50;
+}
+.nav button{
+    background-color: #2c3e50;
+    border: none;
+    font-size: 14px;
+}
+
+.nav button:hover{
+    color:#fcab0e;
+    background-color: #2c3e50;
+}
+
+.nav button:active{
+    border: none;
+    color:#fcab0e;
+    background-color: #2c3e50;
 }
 
 
