--- a/frontend/source/app-customers/src/app/app.component.html
+++ b/frontend/source/app-customers/src/app/app.component.html
@@ -8,13 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+        
       </button>    
       <a class="navbar-brand" href="#">Customer app</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <a href="#about">Image<li></li></a>
-        <a href="#about">Login<li></li></a>
+        <button type="button" class="btn btn-primary" data-toogle="modal" data-target="modalLogin" (click)="showConfirm()">Login</button>
+        <!--<li><a id="hidden" href="#about" (click)="showConfirm()">Login</a></li>-->
       </ul>
     </div>
   </nav>  
@@ -24,6 +25,7 @@
   <app-customers></app-customers>  
 </section>
 <section>
+  
   <app-footer>d</app-footer>
 </section>
 
